# mastermind

./: README.md  pyproject.toml
docs/: game.ipynb
src/: emojis.json  game.py
tests/: test_game.py
